添加TimeZone环境变量，配置DB_PORT

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       NS1_DOMAIN: $NS1_DOMAIN
       NS2_DOMAIN: $NS2_DOMAIN
       SERVER_IP: $SERVER_IP
+      TIME_ZONE: $TIME_ZONE
     depends_on:
       - mysql
     ports:
